package lab08.Ex1_Decorator;

import java.util.Date;

public interface EmployeeInterface {
    void start(Date start);
    void end(Date end);
    void work(); 
}
